<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WebView 浏览器</string>
    <string name="hint_url">输入网址...</string>
    <string name="btn_access">访问</string>
    <string name="btn_back">←</string>
    <string name="btn_forward">→</string>
    <string name="btn_refresh">↻</string>
    <string name="btn_home">⌂</string>
    <string name="btn_open_file">打开HTML文件</string>
    <string name="btn_lock">锁定</string>
    <string name="screen_locked">屏幕已锁定</string>
    <string name="screen_unlocked">屏幕已解锁</string>
    <string name="metacubexd_name">MetaCubeXD</string>
</resources>
